fix: hero title bg on mobile

--- a/components/home/hero.module.css
+++ b/components/home/hero.module.css
@@ -93,7 +93,7 @@
   left: -60px;
   right: -60px;
   z-index: -3;
-  background: radial-gradient(ellipse, rgba(255, 255, 255) 52%, transparent 70%);
+  background: radial-gradient(ellipse, rgba(255, 255, 255) 58%, transparent 70%);
 }
 
 :global(.dark) .headline::before {
@@ -101,7 +101,7 @@
   bottom: -120px;
   left: -60px;
   right: -60px;
-  background: radial-gradient(ellipse, rgba(18, 18, 18, var(--tw-bg-opacity)) 52%, transparent 70%);
+  background: radial-gradient(ellipse, rgba(18, 18, 18, var(--tw-bg-opacity)) 58%, transparent 70%);
 }
 
 @media (max-width: 809px) {
